--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stream-io/video-react-sdk": "^1.24.1",
     "@tanstack/react-query": "^5.89.0",
     "axios": "^1.12.2",
     "lucide-react": "^0.544.0",
